# cw-eval-tools

./: .gitignore  .gitmodules  Dockerfile  README.md  convert.sh  p3_analyze_trajectory_single.py  seeds.txt
230611_fix_boxes_6dof/: main.cpp
configs/: uslam_event_imu.yaml
cpp/: CMakeLists.txt  compile_commands.json  run-compdb.sh  run-compile.sh
cpp/.vscode-archive/: settings.json
cpp/230611_fix_boxes_6dof/: CMakeLists.txt  run.sh
cpp/cmake/: find_pcl.cmake  find_spdlog.cmake
cpp/include/: pcpr.hpp
cpp/module/cwcloud/: CMakeLists.txt
cpp/module/cwcloud/include/cwcloud/: CloudVisualizer.hpp
cpp/module/cwcloud/src/: CloudVisualizer.cpp
cpp/module/cxxutil/: CMakeLists.txt
cpp/module/cxxutil/src/: CSVRow.cpp
cpp/proj_cote/: CMakeLists.txt  README.md  build.sh  compile_commands.json  main.cc  restart.sh
cpp/proj_cote/cmake/: find_spdlog.cmake
cpp/proj_cote/include/: archive.hpp
cpp/proj_cote/src/: archive.cpp
cpp/proj_cote/test/: 10036.yaml
cpp/proj_pcpl/: CMakeLists.txt  compile_commands.json  main.cpp  show.sh
cpp/proj_pcpl/include/: boreas.hpp  pcpr.hpp  preprocess.hpp
cpp/proj_pcpl/index/: CSVRow.cpp.B55770C1DF25D63A.idx  CloudVisualizer.cpp.598D7FF7080BCE45.idx  debug_pcpr.cpp.30C4051680C1DE63.idx  explore_cs_campus.cpp.27E76466CADBB585.idx  pcpr.cpp.B1CD4F347E56C54B.idx
cpp/proj_pcpl/module/cwcloud/src/: CloudVisualizer.cpp
cpp/proj_pcpl/module/cwcloud/test/: CMakeLists.txt
cpp/proj_pcpl/module/cxxutil/include/cxxutil/: CSVRow.hpp
cpp/proj_pcpl/src/: preprocess.cpp
cpp/proj_pcpr/: README.md  main.cpp  preprocess.sh  show.sh
cpp/proj_pcpr/include/: pcpr.hpp  preprocess.hpp
cpp/proj_pcpr/index/: CSVRow.hpp.CC4E2C67852AD4F3.idx  CloudVisualizer.hpp.AE3B0E7DADB19114.idx  parse_point_cloud.cpp.17FCA3794D973193.idx  pcpr.hpp.F59D5A624741F169.idx  save_new_catalog.cpp.CBD934120BB171FC.idx
cpp/proj_pcpr/src/: parse_point_cloud.cpp  pcpr.cpp  preprocess.cpp  save_new_catalog.cpp
cpp/rpg_trajectory_evaluation/: transformations.py
cpp/src/: debug_pcpr.cpp  explore_cs_campus.cpp  main.cpp  parse_point_cloud.cpp  pcpr.cpp  save_new_catalog.cpp
eval_std/: eval.ipynb
eval_std/results_avia_park/: std_consumption_park1.csv  std_park_avia_01_pseudo_loop_vvt5.csv  std_result_park1.csv  std_result_park2.csv
eval_std/results_kitti/: 00.txt  kitti00_part.csv  kitti00_std_loop.csv  kitti00_std_time.csv  kitti02_part.txt  kitti08_part.txt
matlab/tools-eval-feature-tracking/: convert2seedfile.m  create_eof_seeds.mlx  eval_dataset.m  eval_haste.m  eval_multiview_reprojection_error.mlx  eval_ours.m  parse_gt.m  read_feature_track.m  read_single_tracks.m  run_eval.sh  untitled.fig  untitled.mlx
python/: README.md  extract_euroc.py  p3_analyze_trajectory_single.py  pose_handler.ipynb
python/eval_std/results_avia_park/: std_avia_park1_loop_times.csv  std_avia_park2_loop_times.csv  std_consumption_park2.csv  std_park_avia_02_pseudo_loop_vvt5.csv
python/eval_std/results_kitti/: kitti00_part.txt  kitti05_part.txt
python/module/: cloud_visualizer.py  deblur.py  pose.py  zip.py
python/module/utils/: Pose.py  Rotation.py  TrajectoryAnalyzer.py  eval_feature_track.py
python/projects/crossloc/: evaluation.py  extract-attention.py  generate-training-tuples.py
python/scripts/: analyze_trajectory_single.py  analyze_trajectory_single.sh  create_trajectory.ipynb  eval_project.ipynb  generate_submap.ipynb
python/scripts/dataset_kitti/: debkit.ipynb
python/scripts/evnet_feature_tracking/: plot.py
python/scripts/nclt-devel-pytools/: All.ipynb  read_vel_hits.py
python/tutorials/: plot_cs_campus.py
script/: install-argparse.sh  install-opencv.sh  install-pcl.sh  scp.sh  scp2local.sh  scp2server.sh
script/proj_pcpl/: download_boreas.sh
script/proj_pcpr/: download_boreas.sh
scripts/: analyze_trajectories.py  analyze_trajectories.sh  checkerboard_generator.ipynb  convert_uslam_formats.sh  eval_project.ipynb  generate_submap.ipynb  generator.ipynb  plot_ecd_poses.ipynb
scripts/dataset_kaist_urban/: debkit.ipynb
scripts/dataset_kitti/: debkit.ipynb
scripts/dataset_tools/: bag_to_gt.sh  bag_to_pose.py  convert_uslam_format.py
scripts/nclt-devel-pytools/: All.ipynb
test/: stamped_groundtruth.txt
test/result_00/: cache_dict.pt  est.txt  interpolated_estimate.txt  interpolated_gt.txt  relative_estimate.txt
test/result_01/: cache_dict.pt  estimate.txt  interpolated_estimate.txt  relative_estimate.txt  relative_gt.txt
utils/: Pose.py  Rotation.py  SO3.py  Statistics.py  Time.py  Trajectory.py  TrajectoryAlign.py  TrajectoryAnalyzer.py  TrajectoryParser.py  Translation.py  analyizeEndToEnd.py  create_seed_file.py  eval_feature_track.py  feature.py  multiple_traj_errors.py  torch_utils.py
